// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Menu initial closed 1`] = `
.emotion-0 {
  background: hotpink;
}

<span
  class="emotion-1"
>
  <button
    class="emotion-0"
  >
    Click me
  </button>
</span>
`;

exports[`Storyshots Components|Menu multiple open 1`] = `
Array [
  .emotion-0 {
  background: hotpink;
}

<span
    class="emotion-1"
  >
    <button
      class="emotion-0"
    >
      Click me
    </button>
  </span>,
  .emotion-0 {
  background: hotpink;
}

<span
    class="emotion-1"
  >
    <button
      class="emotion-0"
    >
      Click me
    </button>
  </span>,
]
`;

exports[`Storyshots Components|Menu with Items 1`] = `
.emotion-0 {
  background: hotpink;
}

<span
  class="emotion-1"
>
  <button
    class="emotion-0"
  >
    Click me
  </button>
</span>
`;

exports[`Storyshots Components|Menu with Items that close 1`] = `
.emotion-0 {
  background: hotpink;
}

<span
  class="emotion-1"
>
  <button
    class="emotion-0"
  >
    Click me
  </button>
</span>
`;

exports[`Storyshots Components|Menu with links 1`] = `
.emotion-0 {
  background: hotpink;
}

<span
  class="emotion-1"
>
  <button
    class="emotion-0"
  >
    Click me
  </button>
</span>
`;
